--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.0.6/firebase.js"></script>
+    <script src="main.js"></script>
     <title>Cariena Adventure</title>
 </head>
 <body>
-
+<h1>Cariena Adventure</h1>
+<h3 id="adv-event"></h3>
+<h4 id="adv-event-whatdo">What do you do?</h4>
+<div id="adv-event-options"></div>
+<button id="adv-login-button" class="btn btn-default adv-logout">Login to Contribute</button>
 </body>
 </html>
