--- a/index.html
+++ b/index.html
@@ -12,9 +12,29 @@
 </head>
 <body>
 <h1>Cariena Adventure</h1>
-<h3 id="adv-event"></h3>
-<h4 id="adv-event-whatdo">What do you do?</h4>
-<div id="adv-event-options"></div>
+<p id="adv-event-loading">Loading&hellip;</p>
+<div id="adv-event-loading-hidden">
+    <h3 id="adv-event-scenario"></h3>
+    <h4 id="adv-event-whatdo">What do you do?</h4>
+    <div id="adv-event-options" class="list-group"></div>
+</div>
+<button id="adv-back" class="btn btn-default">Back</button>
 <button id="adv-login-button" class="btn btn-default adv-logout">Login to Contribute</button>
+<div id="adv-popup" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 id="adv-popup-title" class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                <p id="adv-popup-message"></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
