--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="adv-popup-login-title">Login</h4>
+                <h4 class="modal-title" id="adv-popup-login-title">Login or Register</h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
