Changed navigation system to hashcode based

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="adv-event-options" class="list-group"></div>
     </div>
     <button id="adv-back" class="btn btn-default">Back</button>
+    <button id="adv-refresh" class="btn btn-default">Refresh</button>
     <button id="adv-event-add" class="btn btn-default adv-login" data-toggle="modal" data-target="#adv-popup-add">Add</button>
     <button id="adv-login-button" class="btn btn-default adv-logout" data-toggle="modal" data-target="#adv-popup-login">Login to Contribute</button>
     <button id="adv-login-logout" class="btn btn-default adv-login">Logout</button>
